test/parser/should_fail/pragma2.souc.bad
import Directovis

{^; bad newline
;^}
main() = do
	x <- 42 ; a comment
	print x ;}
